bindings/c/include/efb.h

typedef enum {
  Diesel,
  JetA,
} EfbFuelType;
typedef struct EfbAircraftBuilder EfbAircraftBuilder;
typedef struct EfbCGLimit EfbCGLimit;
/// An aircraft's fuel tank.
typedef struct EfbFuelTank EfbFuelTank;
/// A position within the aircraft that can be loaded with a payload.
///
/// The payload if an aircraft is loaded to defined _stations_ e.g. a
/// seat. Thus, the station defines where in reference to the aircraft's datum a
/// payload can be placed. The [`LoadedStation`] provides a station with it's
/// actual payload.
///
/// [`Aircraft`]: crate::fp::Aircraft
typedef struct EfbStation EfbStation;
typedef EfbMeasurementf32LengthUnit EfbLength;
typedef EfbMeasurementf32MassUnit EfbMass;
typedef EfbMeasurementf32VolumeUnit EfbVolume;
/// Returns a new aircraft builder.
///
/// Use the builder to gradually provide all the different inputs required to
/// define an aircraft.
///
/// # Safety
///
/// The memory allocated for the builder needs to be freed by calling
/// [`efb_aircraft_builder_free`].
EfbAircraftBuilder *
efb_aircraft_builder_new(void);
/// Frees the aircraft builder.
void
efb_aircraft_builder_free(EfbAircraftBuilder *builder);
/// Pushes a new station to the stations and returns it.
const EfbStation *
efb_aircraft_builder_stations_push(EfbAircraftBuilder *builder, EfbLength arm,
                                   const char *description);
void
efb_aircraft_builder_empty_mass(EfbAircraftBuilder *builder, EfbMass mass);
void
efb_aircraft_builder_empty_balance(EfbAircraftBuilder *builder,
                                   EfbLength distance);
void
efb_aircraft_builder_fuel_type(EfbAircraftBuilder *builder,
                               EfbFuelType fuel_type);
/// Pushes a new tank to the tanks and returns it.
const EfbFuelTank *
efb_aircraft_builder_tanks_push(EfbAircraftBuilder *builder, EfbVolume capacity,
                                EfbLength arm);
/// Pushes a new CG limit into the envelope and returns a pointer to the new
/// limit.
const EfbCGLimit *
efb_aircraft_builder_cg_envelope_push(EfbAircraftBuilder *builder, EfbMass mass,
                                      EfbLength distance);